Topic Pail/JCascalog: Print Topic objects on stdout.

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,20 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
+            
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                  <archive>
+                    <manifest>
+                      <mainClass>data.pail.topicpail.App</mainClass>
+                    </manifest>
+                  </archive>
+                  <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                  </descriptorRefs>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <properties>
