--- a/pom.xml
+++ b/pom.xml
@@ -131,5 +131,23 @@
         <version>1.2.1</version>
     </dependency>
     
+    <dependency>
+        <groupId>org.apache.lucene</groupId>
+        <artifactId>lucene-core</artifactId>
+        <version>4.6.0</version>
+    </dependency>
+    
+    <dependency>
+        <groupId>org.apache.lucene</groupId>
+        <artifactId>lucene-analyzers-common</artifactId>
+        <version>4.6.0</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.twitter4j</groupId>
+        <artifactId>twitter4j-core</artifactId>
+        <version>[3.0,)</version>
+    </dependency>
+    
   </dependencies>
 </project>
